DP-2734 - Reg Page - Fixing hover affect for jump links

--- a/styleguide/source/assets/scss/06-theme/03-organisms/_jump-links.scss
+++ b/styleguide/source/assets/scss/06-theme/03-organisms/_jump-links.scss
@@ -41,13 +41,14 @@
     @media ($bp-small-max) {
       font-weight: 500;
 
-      &.is-active {
+      &.is-active a {
         color: $c-font-dark;
         font-weight: 700;
-      }
 
-      &:hover {
-        color: $c-font-dark;
+        &:hover {
+          color: $c-font-dark;
+          border-bottom-color: transparent;
+        }
       }
 
       & + & {
